fix yaml syntax

--- a/items.yaml
+++ b/items.yaml
@@ -1,50 +1,50 @@
 characters:
-  - sets_1:
-    - 狂戦士の武具:
+  sets_1:
+    狂戦士の武具:
       - 狂戦士のハチェット
       - 狂戦士のホーバーク
-    - シバーブの祭服:
+    シバーブの祭服:
       - シバーブの守護盾
       - シバーブの聖小棍
-    - タンクレドの闘具:
+    タンクレドの闘具:
       - タンクレドの背骨
       - タンクレドの嘴
-    - アルカナの悪戯:
+    アルカナの悪戯:
       - アルカナズ・ヘッド
-    - カタンの罠:
+    カタンの罠:
       - カタンの封具
       - カタンの封具
       - カタンの鎖帷子
       - カタンの戒律
-    - ナジの古き残痕:
+    ナジの古き残痕:
       - ナジのサークレット
-    - ヴィダラの狩猟具:
+    ヴィダラの狩猟具:
       - ヴィダラの罠
       - ヴィダラの蹴爪
       - ヴィダラの刺
-    - 死神の偽装:
+    死神の偽装:
       - 死神の息吹
-    - 極寒の装備:
+    極寒の装備:
       - 極寒の角弓
       - 極寒の腰ベルト
-    - サンダーの愚行:
+    サンダーの愚行:
       - サンダーの踏み石
       - サンダーの迷信
-    - ミラブレガの礼装
+    ミラブレガの礼装:
       - ミラブレガのダイアデム
-    - イラサの貴装
+    イラサの貴装:
       - イラサの袖鎧
-    - 牛王の革装備
+    牛王の革装備:
       - 牛王の革鎧
-    - フサルの守り
+    フサルの守り:
       - フサルの鉄靴
-  - sets_2:
-    - アイゼンハートの武具:
+  sets_2:
+    アイゼンハートの武具:
       - アイゼンハートの兜
       - アイゼンハートの胸甲
       - アイゼンハートのパリー盾
-    - トラン=オールの化身:
+    トラン=オールの化身:
       - トラン=オールの鱗
-    - フサルの守り:
+    フサルの守り:
       - フサルの鉄拳
       - フサルの鉄靴
