--- a/items.yaml
+++ b/items.yaml
@@ -48,3 +48,75 @@ characters:
     フサルの守り:
       - フサルの鉄拳
       - フサルの鉄靴
+  uniques_1:
+    武器:
+      斧:
+        - ゴアシャベル
+        - デススペード
+        - ヒューモンガス
+      弓:
+        - ウィザーストリング
+        - イーグルホーン
+      メイス:
+        - アイアンストーン
+        - ボーンスナップ
+      スピア:
+        - ヤガイのランス
+      長柄:
+        - ソウル・ハーベスト
+        - バトルブランチ
+      剣:
+        - ヘルプレイグ
+        - ペイトリアーク
+        - ヘッドストライカー
+        - シャドウファング
+      ダガー:
+        - スパインリッパー
+      杖:
+        - グレイヴンスパイン
+    防具:
+      シールド:
+        - スチールクラッシュ
+        - ストームギルド
+      グローブ:
+        - グールハイド
+      ヘルム:
+        - ワームスカル
+      アーマー:
+        - アイスブリンク
+      アミュレット:
+  uniques_2:
+    武器:
+      斧:
+      弓:
+        - ウィッチワイルド・ストリング
+      メイス:
+        - アースシェイカー
+      スピア:
+        - ブラッドシーフ
+        - ヴァイパーフォーク
+      長柄:
+        - スチールゴウド
+        - ディモークズ・ヒュー
+      剣:
+        - ペイトリアーク
+        - グリズウォルドの刃
+        - ソードガード
+        - キネミルズ・アウル
+        - ソウルフレイ
+      ダガー:
+      杖:
+    防具:
+      シールド:
+        - ストームチェイサー
+        - ラダメントの宝盾
+        - ランス・ガード
+        - 無蓋の防壁
+      グローブ:
+        - メイジフィスト
+      ヘルム:
+      アーマー:
+        - ダークグロー
+        - トゥースロウ
+      アミュレット:
+        - マヒン＝オーク・キュリオ
