--- a/items.yaml
+++ b/items.yaml
@@ -1,4 +1,32 @@
 characters:
+  trader:
+    stock:
+      sets:
+        - 死神の息吹
+        - 死神の息吹
+        - クレグローの指先
+        - クレグローの指先
+        - タンクレドの嘴
+        - タンクレドの嘴
+        - ヴィダラの刺
+        - ヴィダラの刺
+        - トラン=オールの鱗
+      uniques:
+        - クソンのブーツ
+      other:
+        - 宝石を飾りしウォーハット:
+            details:
+              - P-Topaz x2
+    waitning:
+      sets:
+        - 御使いの鎌剣
+        - 御使いの光輪
+      uniques:
+        - タイタンの復習
+      other:
+        - 彩られしアミュレット:
+            details:
+              - 全属性耐性 +20
   sets_1:
     狂戦士の武具:
       - 狂戦士のハチェット
