--- a/items.yaml
+++ b/items.yaml
@@ -18,12 +18,12 @@ characters:
         - 宝石を飾りしウォーハット:
             details:
               - P-Topaz x2
-    waitning:
+    waiting:
       sets:
         - 御使いの鎌剣
         - 御使いの光輪
       uniques:
-        - タイタンの復習
+        - タイタンの復讐
       other:
         - 彩られしアミュレット:
             details:
