--- a/items.yaml
+++ b/items.yaml
@@ -1,150 +1,396 @@
-characters:
-  trader:
-    stock:
-      sets:
-        - 死神の息吹
-        - 死神の息吹
-        - クレグローの指先
-        - クレグローの指先
-        - タンクレドの嘴
-        - タンクレドの嘴
-        - ヴィダラの刺
-        - ヴィダラの刺
-        - トラン=オールの鱗
-      uniques:
-        - ペイトリアーク
-        - クソンのブーツ
-      other:
-        - 宝石を飾りしウォーハット:
-            details:
-              - P-Topaz x2
-    waiting:
-      sets:
-        - 御使いの鎌剣
-        - 御使いの光輪
-      uniques:
-        - タイタンの復讐
-      other:
-        - 彩られしアミュレット:
-            details:
-              - 全属性耐性 +20
-  sets_1:
-    狂戦士の武具:
-      - 狂戦士のハチェット
-      - 狂戦士のホーバーク
-    シバーブの祭服:
-      - シバーブの守護盾
-      - シバーブの聖小棍
-    タンクレドの闘具:
-      - タンクレドの背骨
-      - タンクレドの嘴
-    アルカナの悪戯:
-      - アルカナズ・ヘッド
-    カタンの罠:
-      - カタンの封具
-      - カタンの封具
-      - カタンの鎖帷子
-      - カタンの戒律
-    ナジの古き残痕:
-      - ナジのサークレット
-    ヴィダラの狩猟具:
-      - ヴィダラの罠
-      - ヴィダラの蹴爪
-      - ヴィダラの刺
-    死神の偽装:
-      - 死神の息吹
-    極寒の装備:
-      - 極寒の角弓
-      - 極寒の腰ベルト
-    サンダーの愚行:
-      - サンダーの踏み石
-      - サンダーの迷信
-    ミラブレガの礼装:
-      - ミラブレガのダイアデム
-    イラサの貴装:
-      - イラサの袖鎧
-    牛王の革装備:
-      - 牛王の革鎧
-    フサルの守り:
-      - フサルの鉄靴
-  sets_2:
-    アイゼンハートの武具:
-      - アイゼンハートの兜
-      - アイゼンハートの胸甲
-      - アイゼンハートのパリー盾
-    トラン=オールの化身:
-      - トラン=オールの鱗
-    フサルの守り:
-      - フサルの鉄拳
-      - フサルの鉄靴
-  uniques_1:
-    武器:
-      斧:
-        - ゴアシャベル
-        - デススペード
-        - ヒューモンガス
-      弓:
-        - ウィザーストリング
-        - イーグルホーン
-      メイス:
-        - アイアンストーン
-        - ボーンスナップ
-      スピア:
-        - ヤガイのランス
-      長柄:
-        - ソウル・ハーベスト
-        - バトルブランチ
-      剣:
-        - ヘルプレイグ
-        - ペイトリアーク
-        - ヘッドストライカー
-        - シャドウファング
-      ダガー:
-        - スパインリッパー
-      杖:
-        - グレイヴンスパイン
-    防具:
-      シールド:
-        - スチールクラッシュ
-        - ストームギルド
-      グローブ:
-        - グールハイド
-      ヘルム:
-        - ワームスカル
-      アーマー:
-        - アイスブリンク
-      アミュレット:
-  uniques_2:
-    武器:
-      斧:
-      弓:
-        - ウィッチワイルド・ストリング
-      メイス:
-        - アースシェイカー
-      スピア:
-        - ブラッドシーフ
-        - ヴァイパーフォーク
-      長柄:
-        - スチールゴウド
-        - ディモークズ・ヒュー
-      剣:
-        - グリズウォルドの刃
-        - ソードガード
-        - キネミルズ・アウル
-        - ソウルフレイ
-      ダガー:
-      杖:
-    防具:
-      シールド:
-        - ストームチェイサー
-        - ラダメントの宝盾
-        - ランス・ガード
-        - 無蓋の防壁
-      グローブ:
-        - メイジフィスト
-      ヘルム:
-      アーマー:
-        - ダークグロー
-        - トゥースロウ
-      アミュレット:
-        - マヒン＝オーク・キュリオ
+trader:
+  stock:
+    - name: 死神の息吹
+      rarity: set
+      sockets: 0
+      varies:
+    - name: 死神の息吹
+      rarity: set
+      sockets: 0
+      varies:
+    - name: クレグローの指先
+      rarity: set
+      sockets: 0
+      varies:
+    - name: クレグローの指先
+      rarity: set
+      sockets: 0
+      varies:
+    - name: タンクレドの嘴
+      rarity: set
+      sockets: 0
+      varies:
+    - name: タンクレドの嘴
+      rarity: set
+      sockets: 0
+      varies:
+    - name: ヴィダラの刺
+      rarity: set
+      sockets: 0
+      varies:
+    - name: ヴィダラの刺
+      rarity: set
+      sockets: 0
+      varies:
+    - name: トラン=オールの鱗
+      rarity: set
+      sockets: 0
+      varies:
+    - name: ペイトリアーク
+      rarity: unique
+      sockets: 0
+      varies:
+    - name: クソンのブーツ
+      rarity: unique
+      sockets: 0
+      varies:
+    - name: 宝石を飾りしウォーハット
+      rarity: normal
+      sockets: 2
+      varies:
+        - P-Topaz x2
+  waiting:
+    - name: 御使いの鎌剣
+      rarity: set
+      sockets: 0
+      varies:
+    - name: 御使いの光輪
+      rarity: set
+      sockets: 0
+      varies:
+    - name: タイタンの復讐
+      rarity: unique
+      sockets: 0
+      varies:
+    - name: 彩られしアミュレット
+      rarity: magic
+      sockets: 0
+      varies:
+        - 全属性耐性 +20
+sets_1:
+  狂戦士の武具:
+    - name: 狂戦士のハチェット
+      rarity: set
+      sockets: 0
+      varies:
+    - name: 狂戦士のホーバーク
+      rarity: set
+      sockets: 0
+      varies:
+  シバーブの祭服:
+    - name: シバーブの守護盾
+      rarity: set
+      sockets: 0
+      varies:
+    - name: シバーブの聖小棍
+      rarity: set
+      sockets: 0
+      varies:
+  タンクレドの闘具:
+    - name: タンクレドの背骨
+      rarity: set
+      sockets: 0
+      varies:
+    - name: タンクレドの嘴
+      rarity: set
+      sockets: 0
+      varies:
+  アルカナの悪戯:
+    - name: アルカナズ・ヘッド
+      rarity: set
+      sockets: 0
+      varies:
+  カタンの罠:
+    - name: カタンの封具
+      rarity: set
+      sockets: 0
+      varies:
+    - name: カタンの封具
+      rarity: set
+      sockets: 0
+      varies:
+    - name: カタンの鎖帷子
+      rarity: set
+      sockets: 0
+      varies:
+    - name: カタンの戒律
+      rarity: set
+      sockets: 0
+      varies:
+  ナジの古き残痕:
+    - name: ナジのサークレット
+      rarity: set
+      sockets: 0
+      varies:
+  ヴィダラの狩猟具:
+    - name: ヴィダラの罠
+      rarity: set
+      sockets: 0
+      varies:
+    - name: ヴィダラの蹴爪
+      rarity: set
+      sockets: 0
+      varies:
+    - name: ヴィダラの刺
+      rarity: set
+      sockets: 0
+      varies:
+  死神の偽装:
+    - name: 死神の息吹
+      rarity: set
+      sockets: 0
+      varies:
+  極寒の装備:
+    - name: 極寒の角弓
+      rarity: set
+      sockets: 0
+      varies:
+    - name: 極寒の腰ベルト
+      rarity: set
+      sockets: 0
+      varies:
+  サンダーの愚行:
+    - name: サンダーの踏み石
+      rarity: set
+      sockets: 0
+      varies:
+    - name: サンダーの迷信
+      rarity: set
+      sockets: 0
+      varies:
+  ミラブレガの礼装:
+    - name: ミラブレガのダイアデム
+      rarity: set
+      sockets: 0
+      varies:
+  イラサの貴装:
+    - name: イラサの袖鎧
+      rarity: set
+      sockets: 0
+      varies:
+  牛王の革装備:
+    - name: 牛王の革鎧
+      rarity: set
+      sockets: 0
+      varies:
+  フサルの守り:
+    - name: フサルの鉄靴
+      rarity: set
+      sockets: 0
+      varies:
+sets_2:
+  アイゼンハートの武具:
+    - name: アイゼンハートの兜
+      rarity: set
+      sockets: 0
+      varies:
+    - name: アイゼンハートの胸甲
+      rarity: set
+      sockets: 0
+      varies:
+    - name: アイゼンハートのパリー盾
+      rarity: set
+      sockets: 0
+      varies:
+  トラン=オールの化身:
+    - name: トラン=オールの鱗
+      rarity: set
+      sockets: 0
+      varies:
+  フサルの守り:
+    - name: フサルの鉄拳
+      rarity: set
+      sockets: 0
+      varies:
+    - name: フサルの鉄靴
+      rarity: set
+      sockets: 0
+      varies:
+uniques_1:
+  武器:
+    斧:
+      - name: ゴアシャベル
+        rarity: unique
+        sockets: 0
+        varies:
+      - name: デススペード
+        rarity: unique
+        sockets: 0
+        varies:
+      - name: ヒューモンガス
+        rarity: unique
+        sockets: 0
+        varies:
+    弓:
+      - name: ウィザーストリング
+        rarity: unique
+        sockets: 0
+        varies:
+      - name: イーグルホーン
+        rarity: unique
+        sockets: 0
+        varies:
+    メイス:
+      - name: アイアンストーン
+        rarity: unique
+        sockets: 0
+        varies:
+      - name: ボーンスナップ
+        rarity: unique
+        sockets: 0
+        varies:
+    スピア:
+      - name: ヤガイのランス
+        rarity: unique
+        sockets: 0
+        varies:
+    長柄:
+      - name: ソウル・ハーベスト
+        rarity: unique
+        sockets: 0
+        varies:
+      - name: バトルブランチ
+        rarity: unique
+        sockets: 0
+        varies:
+    剣:
+      - name: ヘルプレイグ
+        rarity: unique
+        sockets: 0
+        varies:
+      - name: ペイトリアーク
+        rarity: unique
+        sockets: 0
+        varies:
+      - name: ヘッドストライカー
+        rarity: unique
+        sockets: 0
+        varies:
+      - name: シャドウファング
+        rarity: unique
+        sockets: 0
+        varies:
+    ダガー:
+      - name: スパインリッパー
+        rarity: unique
+        sockets: 0
+        varies:
+    杖:
+      - name: グレイヴンスパイン
+        rarity: unique
+        sockets: 0
+        varies:
+  防具:
+    シールド:
+      - name: スチールクラッシュ
+        rarity: unique
+        sockets: 0
+        varies:
+      - name: ストームギルド
+        rarity: unique
+        sockets: 0
+        varies:
+    グローブ:
+      - name: グールハイド
+        rarity: unique
+        sockets: 0
+        varies:
+    ヘルム:
+      - name: ワームスカル
+        rarity: unique
+        sockets: 0
+        varies:
+    アーマー:
+      - name: アイスブリンク
+        rarity: unique
+        sockets: 0
+        varies:
+    アミュレット:
+uniques_2:
+  武器:
+    斧:
+    弓:
+      - name: ウィッチワイルド・ストリング
+        rarity: unique
+        sockets: 0
+        varies:
+    メイス:
+      - name: アースシェイカー
+        rarity: unique
+        sockets: 0
+        varies:
+    スピア:
+      - name: ブラッドシーフ
+        rarity: unique
+        sockets: 0
+        varies:
+      - name: ヴァイパーフォーク
+        rarity: unique
+        sockets: 0
+        varies:
+    長柄:
+      - name: スチールゴウド
+        rarity: unique
+        sockets: 0
+        varies:
+      - name: ディモークズ・ヒュー
+        rarity: unique
+        sockets: 0
+        varies:
+    剣:
+      - name: グリズウォルドの刃
+        rarity: unique
+        sockets: 0
+        varies:
+      - name: ソードガード
+        rarity: unique
+        sockets: 0
+        varies:
+      - name: キネミルズ・アウル
+        rarity: unique
+        sockets: 0
+        varies:
+      - name: ソウルフレイ
+        rarity: unique
+        sockets: 0
+        varies:
+    ダガー:
+    杖:
+  防具:
+    シールド:
+      - name: ストームチェイサー
+        rarity: unique
+        sockets: 0
+        varies:
+      - name: ラダメントの宝盾
+        rarity: unique
+        sockets: 0
+        varies:
+      - name: ランス・ガード
+        rarity: unique
+        sockets: 0
+        varies:
+      - name: 無蓋の防壁
+        rarity: unique
+        sockets: 0
+        varies:
+    グローブ:
+      - name: メイジフィスト
+        rarity: unique
+        sockets: 0
+        varies:
+    ヘルム:
+    アーマー:
+      - name: ダークグロー
+        rarity: unique
+        sockets: 0
+        varies:
+      - name: トゥースロウ
+        rarity: unique
+        sockets: 0
+        varies:
+    アミュレット:
+      - name: マヒン＝オーク・キュリオ
+        rarity: unique
+        sockets: 0
+        varies:
